# infarquant

./: LICENSE  README.md  build_exe.ps1  launch.py  pyproject.toml  requirements.txt
sample-data/: README.md
src/infarquant/: __init__.py  __main__.py  analysis.py  app.py  preprocess.py  ui.py
src/infarquant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  helpers.py  test_analysis.py  test_analysis_workspace.py  test_channels.py  test_preprocess.py  test_preprocess_tab.py  test_quantify.py
